test_bin_long.log
   Compiling candle-transformers v0.8.4
   Compiling r2d2-cortex v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-cortex)
warning: unused import: `api::tokio::Api`
  --> r2d2-cortex/src/models/audio_agent.rs:11:14
   |
11 | use hf_hub::{api::tokio::Api, Repo, RepoType};
   |              ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `r2d2-cortex` (lib) generated 1 warning (run `cargo fix --lib -p r2d2-cortex` to apply 1 suggestion)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tracing_subscriber`
 --> r2d2-cortex/src/bin/test_audio.rs:7:5
  |
7 |     tracing_subscriber::fmt()
  |     ^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `tracing_subscriber`
  |
  = help: if you wanted to use a crate named `tracing_subscriber`, use `cargo add tracing_subscriber` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `r2d2-cortex` (bin "test_audio") due to 1 previous error
